--- a/docs/Shiny_Intro.Rmd
+++ b/docs/Shiny_Intro.Rmd
@@ -13,9 +13,12 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## What is Shiny?
 
+According to [Shiny from RStudio](https://shiny.rstudio.com):
+
 - An R package that builds interactive web apps directly from R
+- Uses [Bootstrap](http://getbootstrap.com) style
 - Can be presented by:
-    - Standalone apps on a webpage (compatible with mobile platforms)
+    - Standalone apps on a webpage
     - [R Markdown](http://rmarkdown.rstudio.com/) documents
     - [Dashboards](http://rstudio.github.io/shinydashboard/)
 - Can be extended with:
